--- a/gameshock_project/src/main/resources/templates/fragments/footer.html
+++ b/gameshock_project/src/main/resources/templates/fragments/footer.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 	<head th:fragment="footer_css">
-		<link th:href="@{/css/footer_style.css}" rel="stylesheet">
+		<link th:href="@{/css/fragments_style/footer_style.css}" rel="stylesheet">
 	</head>
 	
 	<body>
