--- a/gameshock_project/src/main/resources/templates/information.html
+++ b/gameshock_project/src/main/resources/templates/information.html
@@ -4,7 +4,7 @@
 	    <head th:insert="fragments/base.html :: headerfiles(title=#{pageTitle.informazioni})"></head>
 		<head th:insert="fragments/navbar.html :: navbar_css"> </head>
 		<head th:insert="fragments/footer.html :: footer_css"> </head>
-		<link th:href="@{/css/informazioni_style.css}" rel="stylesheet">
+		<link th:href="@{/css/information_style/information_style.css}" rel="stylesheet">
 	</head>
 	<body>
 	
