--- a/gameshock_project/src/main/resources/static/css/fragments_style/navbar_style.css
+++ b/gameshock_project/src/main/resources/static/css/fragments_style/navbar_style.css
@@ -1,53 +1,4 @@
 /* ----------
-Configurazioni base
--------------- */
-
-body, html{
-    margin: 0;
-    padding: 0;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-body{
-    background: transparent;
-}
-
-
-
-*{
-    box-sizing: border-box;
-}
-
-.page{
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background: white;
-}
-
-h1{font-size: 60px;}
-h2{font-size: 50px;}
-h3{font-size: 35px;}
-h4{font-size: 25px;}
-h5{font-size: 20px;}
-h6{font-size: 15px;}
-
-
-
-
-
-.wt{color: white;}
-.brwh{border: 1px solid white; border-radius: 30px; padding: 5px;}
-
-@media (max-width: 768px){
-
-    body{
-        margin: 0px;
-    }
-}
-
-
-/* ----------
 HEADER
 -------------- */
 
@@ -104,6 +55,7 @@ HEADER
     text-decoration: none;
     padding: 10px;
     transition: all 0.1s ease-in-out;
+    font-size: 20px;
 }
 
 .menu li a:hover{
