--- a/gameshock_project/src/main/resources/templates/fragments/navbar.html
+++ b/gameshock_project/src/main/resources/templates/fragments/navbar.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 	<head th:fragment="navbar_css">
-		<link th:href="@{/css/navbar_style.css}" rel="stylesheet">
+		<link th:href="@{/css/fragments_style/navbar_style.css}" rel="stylesheet">
 	</head>
 	
 	<body>
@@ -15,10 +15,10 @@
 	            <div class="utility">
 	                <ul class="menu">
 	                    <li class="flip_menu"><a href="home.html" th:href="@{'/index'}">Home</a></li>
-	                    <li class="flip_menu"><a href="videogame.html" th:href="@{'/videogame'}">VideoGame</a></li>
-	                    <li class="flip_menu"><a href="accessori.html" th:href="@{'/accessori'}">Accessori</a></li>
-	                    <li class="flip_menu"><a href="informazioni.html" th:href="@{'/informazioni'}">Informazioni</a></li>
-	                    <li class="flip_menu"><a href="login_amm.html" th:href="@{'/login'}">Accedi</a></li>
+	                    <li class="flip_menu"><a href="videogame.html" th:href="@{'/videogames'}">Videogames</a></li>
+	                    <li class="flip_menu"><a href="accessori.html" th:href="@{'/accessories'}">Accessories</a></li>
+	                    <li class="flip_menu"><a href="informazioni.html" th:href="@{'/information'}">Information</a></li>
+	                    <li class="flip_menu"><a href="login_amm.html" th:href="@{'/login'}">Login</a></li>
 	                </ul>
 	                <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
 	            </div>
