--- a/gameshock_project/src/main/resources/static/css/admin_style/insert_videogame_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/insert_videogame_amm_style.css
@@ -5,12 +5,12 @@ CONTENT PAGE
 .content_page{
     position: absolute;
     top: 80px;
-    left: 250px;
+    left: 260px;
     height: auto;
-    width: calc(100% - 250px);
+    width: calc(100% - 260px);
     text-align: center;
     padding: 50px;
-    background: url(../images/scontro-controller.jpg) center center;
+    background: url(../../images/admin_images/clash_controller.jpg) center center;
     background-size: cover;
     background-attachment: scroll;
 }
