--- a/gameshock_project/src/main/resources/static/css/fragments_style/navbar_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/fragments_style/navbar_amm_style.css
@@ -88,6 +88,7 @@ HEADER
     text-decoration: none;
     padding: 10px;
     transition: all 0.1s ease-in-out;
+    font-size: 20px;
 }
 
 .menu li a:hover{
