--- a/gameshock_project/src/main/resources/static/css/videogame_style/details_videogame_style.css
+++ b/gameshock_project/src/main/resources/static/css/videogame_style/details_videogame_style.css
@@ -92,7 +92,7 @@ RECOMMENDED PRODUCTS
 
 .recommended{
     /* border: 2px solid green; */
-    background: url(../images/video-game-controls-neon-style-brick-wall_24908-58916.jpg);
+    background: url(../../images/general_images/controller_ps4.jpg);
     background-size: cover;
     text-align: center;
     padding-top: 40px;
