--- a/gameshock_project/src/main/resources/templates/admin/show_accessories_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/show_accessories_amm.html
@@ -16,10 +16,10 @@
 	    <section class="content_page">
 	        <div class="title_and_search">
 	            <h1>Accessory</h1>
-	            <!--<form th:action="@{/admin/ricercaAccessorio}" method="POST">
+	            <form th:action="@{/admin/ricercaAccessorio}" method="POST">
 	                <input type="text" name="param" placeholder="search accessory">
 	                <input type="submit" value="Search">
-	            </form> -->
+	            </form> 
 	        </div>
 	
 	
