--- a/gameshock_project/src/main/resources/templates/login_amm.html
+++ b/gameshock_project/src/main/resources/templates/login_amm.html
@@ -4,7 +4,7 @@
 	    <head th:insert="fragments/base.html :: headerfiles(title=#{pageTitle.login})"></head>
 		<head th:insert="fragments/navbar.html :: navbar_css"> </head>
 		<head th:insert="fragments/footer.html :: footer_css"> </head>
-		<link th:href="@{/css/login_amm_style.css}" rel="stylesheet">
+		<link th:href="@{/css/admin_style/login_amm_style.css}" rel="stylesheet">
 	</head>
 	<body>
 	
@@ -12,7 +12,7 @@
 	
 	    <section class="page_content">
 	        <video loop="true" autoplay="autoplay" muted>
-	            <source th:src="@{/images/Lightning - 28067.mp4}" type="video/mp4">
+	            <source th:src="@{/images/general_images/Lightning.mp4}" type="video/mp4">
 	            Il browswer non supporta il video
 	        </video>
 	        <div class="login_form">
