--- a/gameshock_project/src/main/resources/static/css/admin_style/home_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/home_amm_style.css
@@ -5,14 +5,14 @@ CONTENT PAGE
 .content_page{
     position: absolute;
     top: 80px;
-    left: 250px;
+    left: 260px;
     height: calc(100% - 80px);
-    width: calc(100% - 250px);
+    width: calc(100% - 260px);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background: url(../images/scontro-controller.jpg) center center;
+    background: url(../../images/admin_images/clash_controller.jpg) center center;
     background-size: cover;
 }
 
