--- a/gameshock_project/src/main/resources/static/css/admin_style/show_videogames_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/show_videogames_amm_style.css
@@ -7,10 +7,10 @@ CONTENT PAGE
     top: 80px;
     left: 260px;
     /* height: calc(100% - 80px); */
-    width: calc(100% - 250px);
+    width: calc(100% - 260px);
     text-align: center;
     padding: 50px;
-    background: url(../images/scontro-controller.jpg) center center;
+    background: url(../../images/admin_images/clash_controller.jpg) center center;
     background-size: cover;
     background-attachment: scroll;
 }
