--- a/gameshock_project/src/main/resources/templates/admin/insert_videogame_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/insert_videogame_amm.html
@@ -4,7 +4,7 @@
 	    <head th:insert="fragments/base.html :: headerfiles(title=#{pageTitle.inserisciVideogameAmm})"></head>
 		<head th:insert="fragments/navbar_amm.html :: navbar_amm_css"> </head>
 		<head th:insert="fragments/navdrawer_amm.html :: navdrawer_amm_css"> </head>
-		<link th:href="@{/css/inserisci_videogame_amm_style.css}" rel="stylesheet">
+		<link th:href="@{/css/admin_style/insert_videogame_amm_style.css}" rel="stylesheet">
 	</head>
 	<body>
 	
@@ -37,8 +37,8 @@
 	            <input type="text" placeholder="10$" th:field="*{usedPrice}">
 	            <h6 th:if="${#fields.hasErrors('usedPrice')}" th:errors="*{usedPrice}" th:style="'color:red'"> </h6>
 	            <h6>Data Release:</h6>
-	            <input type="date" placeholder="Minecraft" th:field="*{dateRelease}">
-	            <h6 th:if="${#fields.hasErrors('dateRelease')}" th:errors="*{dateRelease}" th:style="'color:red'"> </h6>
+	            <input type="date" placeholder="Minecraft" th:field="*{releaseDate}">
+	            <h6 th:if="${#fields.hasErrors('releaseDate')}" th:errors="*{releaseDate}" th:style="'color:red'"> </h6>
 	            <h6>Genre:</h6>
 	            <input type="text" placeholder="Minecraft" th:field="*{genre}">
 	            <h6 th:if="${#fields.hasErrors('genre')}" th:errors="*{genre}" th:style="'color:red'"> </h6>
