--- a/gameshock_project/src/main/resources/templates/admin/show_videogames_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/show_videogames_amm.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <head th:insert="fragments/base.html :: headerfiles(title=#{pageTitle.vediVideogameAmm})"></head>
-	<head th:insert="fragments/navbar_amm.html :: navbar_amm_css"> </head>
-	<head th:insert="fragments/navdrawer_amm.html :: navdrawer_amm_css"> </head>
-	<link th:href="@{/css/vedi_videogame_amm_style.css}" rel="stylesheet">
-</head>
-<body>
-
-    <header th:replace="fragments/navbar_amm.html :: navbar_amm"></header>
-
-    <header th:replace="fragments/navdrawer_amm.html :: navdrawer_amm"></header>
-
-    <section class="content_page">
-        <div class="title_and_search">
-            <h1>Videogame</h1>
-            <form th:action="@{/admin/ricercaVideogame}" method="POST">
-                <input type="text" name="param" placeholder="ricerca videogame">
-                <input type="submit" value="Search">
-            </form>
-        </div>
-
-        <div class="content_item" th:each="videogame : ${videogames}">
-            <a href="dettagli_videogame.html" class="link_item">
-                <div class="img_item">
-                    <img th:src="*{'data:image/jpeg;base64,'+{videogame.image}}" alt="">
-                </div>
-                <h6><span>Name: </span><span th:text="${videogame.name}">nomeprova</span></h6>
-                <h6><span>Code: </span><span th:text="${videogame.code}">codiceprova</span></h6>
-                <h6><span>Platform: </span><span th:text="${videogame.platform.name}">nomepiattaforma</span></h6>					
-            </a>
-            <a class="cestino" th:href="@{'/admin/deleteVideogameAmm/' + ${videogame.code}}"><img th:src="@{/images/icona_cestino.png}" alt=""></a>
-        </div>
-        
-    </section>
-
-
-</body>
+	<head>
+	    <head th:insert="fragments/base.html :: headerfiles(title=#{pageTitle.vediVideogameAmm})"></head>
+		<head th:insert="fragments/navbar_amm.html :: navbar_amm_css"> </head>
+		<head th:insert="fragments/navdrawer_amm.html :: navdrawer_amm_css"> </head>
+		<link th:href="@{/css/admin_style/show_videogames_amm_style.css}" rel="stylesheet">
+	</head>
+	<body>
+	
+	    <header th:replace="fragments/navbar_amm.html :: navbar_amm"></header>
+	
+	    <header th:replace="fragments/navdrawer_amm.html :: navdrawer_amm"></header>
+	
+	    <section class="content_page">
+	        <div class="title_and_search">
+	            <h1>Videogames</h1>
+	            <form th:action="@{/admin/ricercaVideogame}" method="POST">
+	                <input type="text" name="param" placeholder="ricerca videogame">
+	                <input type="submit" value="Search">
+	            </form>
+	        </div>
+	
+	        <div class="content_item" th:each="videogame : ${videogames}">
+	            <a href="dettagli_videogame.html" class="link_item">
+	                <div class="img_item">
+	                    <img th:src="*{'data:image/jpeg;base64,'+{videogame.image}}" alt="">
+	                </div>
+	                <h6><span>Name: </span><span th:text="${videogame.name}">nomeprova</span></h6>
+	                <h6><span>Code: </span><span th:text="${videogame.code}">codiceprova</span></h6>
+	                <h6><span>Platform: </span><span th:text="${videogame.platform.name}">nomepiattaforma</span></h6>					
+	            </a>
+	            <a class="cestino" th:href="@{'/admin/deleteVideogameAmm/' + ${videogame.code}}"><img th:src="@{/images/icona_cestino.png}" alt=""></a>
+	        </div>
+	        
+	    </section>
+	
+	
+	</body>
 </html>
