--- a/gameshock_project/src/main/resources/templates/details_videogame.html
+++ b/gameshock_project/src/main/resources/templates/details_videogame.html
@@ -1,75 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <head th:insert="fragments/base.html :: headerfiles(title=#{pageTitle.dettagliVideogame})"></head>
-	<head th:insert="fragments/navbar.html :: navbar_css"> </head>
-	<head th:insert="fragments/footer.html :: footer_css"> </head>
-	<link th:href="@{/css/dettagli_videogame_style.css}" rel="stylesheet">
-</head>
-<body>
-
-    <header th:replace="fragments/navbar.html :: navbar"></header>
-
-    <section class="showcase_videogame">
-        <div class="img_videogame">
-            <img th:src="*{'data:image/jpeg;base64,'+ {videogame.image}}" alt="">
-        </div>
-        <div class="info_videogame">
-            <h1>Nome Videogame</h1>
-            <h3><span>Codice:</span><span th:text="${videogame.code}">codice1</span> </h3>
-            <h3><span>Genere:</span><span th:text="${videogame.genre}">genere1</span> </h3>
-            <h3><span class="new_price">Prezzo nuovo: </span><span class="new_price" th:text="${videogame.newPrice}">100$</span></h3>
-            <h3><span class="old_price">Prezzo usato: </span><span class="old_price" th:text="${videogame.usedPrice}">50$</span></h3>
-        </div>
-    </section>
-
-    <section class="more_info">
-        <div class="content_specific">
-            <h2>Pegi:</h2>
-            <p th:text="${videogame.pegi}"> 5</p>
-        </div>
-        <div class="content_specific">
-            <h2>Publisher:</h2>
-            <p th:text="${videogame.publisher}"> Ubisoft</p>
-        </div>
-        <div class="content_specific">
-            <h2>Descrizione:</h2>
-            <p th:text="${videogame.description}">Lorem ipsum dolor sit amet consectetur adipisicing 
-                elit. Ad quas quasi, sed ducimus qui, dolorem totam,
-                possimus atque vero hic accusantium assumenda non 
-                fugiat perspiciatis ipsum distinctio est ea dolore.
-            </p>
-        </div>
-        <div class="content_specific">
-            <h2>Voto:</h2>
-            <p th:text="${videogame.rating}">5</p>
-        </div>
-        <div class="content_specific">
-            <h2>Data di rilascio:</h2>
-            <p th:text="${videogame.dateRelease}">15/10/2020</p>
-        </div>
-
-    </section>
-
-
-    <section class="recommended">
-        <h1>VideoGame consigliati</h1>
-
-        <div class="recommended_products">
-            <div class="box_recommended_products" th:each="videogameRec : ${videogamesRec}">
-                <a href="dettagli_videogame.html">
-                    <img th:src="*{'data:image/jpeg;base64,'+ {videogame.image}}" alt="">
-                    <h2 th:text="${videogameRec.name}">Nome Gioco</h2>
-                    <h3 class="prezzo" th:text="${videogameRec.newPrice}">50$</h3>
-                </a>
-            </div>
-
-    </section>
-
-
-    <footer th:replace="fragments/footer.html :: footer"></footer>
-
-    <script th:replace="fragments/base.html :: script"></script>
-    
-</body>
+	<head>
+	    <head th:insert="fragments/base.html :: headerfiles(title=#{pageTitle.dettagliVideogame})"></head>
+		<head th:insert="fragments/navbar.html :: navbar_css"> </head>
+		<head th:insert="fragments/footer.html :: footer_css"> </head>
+		<link th:href="@{/css/videogame_style/details_videogame_style.css}" rel="stylesheet">
+	</head>
+	<body>
+	
+	    <header th:replace="fragments/navbar.html :: navbar"></header>
+	
+	    <section class="showcase_videogame">
+	        <div class="img_videogame">
+	            <img th:src="*{'data:image/jpeg;base64,'+ {videogame.image}}" alt="">
+	        </div>
+	        <div class="info_videogame">
+	            <h1>Nome Videogame</h1>
+	            <h3><span>Codice:</span><span th:text="${videogame.code}">codice1</span> </h3>
+	            <h3><span>Genere:</span><span th:text="${videogame.genre}">genere1</span> </h3>
+	            <h3><span class="new_price">Prezzo nuovo: </span><span class="new_price" th:text="${videogame.newPrice}">100$</span></h3>
+	            <h3><span class="old_price">Prezzo usato: </span><span class="old_price" th:text="${videogame.usedPrice}">50$</span></h3>
+	        </div>
+	    </section>
+	
+	    <section class="more_info">
+	        <div class="content_specific">
+	            <h2>Pegi:</h2>
+	            <p th:text="${videogame.pegi}"> 5</p>
+	        </div>
+	        <div class="content_specific">
+	            <h2>Publisher:</h2>
+	            <p th:text="${videogame.publisher}"> Ubisoft</p>
+	        </div>
+	        <div class="content_specific">
+	            <h2>Descrizione:</h2>
+	            <p th:text="${videogame.description}">Lorem ipsum dolor sit amet consectetur adipisicing 
+	                elit. Ad quas quasi, sed ducimus qui, dolorem totam,
+	                possimus atque vero hic accusantium assumenda non 
+	                fugiat perspiciatis ipsum distinctio est ea dolore.
+	            </p>
+	        </div>
+	        <div class="content_specific">
+	            <h2>Voto:</h2>
+	            <p th:text="${videogame.rating}">5</p>
+	        </div>
+	        <div class="content_specific">
+	            <h2>Data di rilascio:</h2>
+	            <p th:text="${videogame.releaseDate}">15/10/2020</p>
+	        </div>
+	
+	    </section>
+	
+	
+	    <section class="recommended">
+	        <h1>VideoGame consigliati</h1>
+	
+	        <div class="recommended_products">
+	            <div class="box_recommended_products" th:each="videogameRec : ${videogamesRec}">
+	                <a href="dettagli_videogame.html">
+	                    <img th:src="*{'data:image/jpeg;base64,'+ {videogame.image}}" alt="">
+	                    <h2 th:text="${videogameRec.name}">Nome Gioco</h2>
+	                    <h3 class="prezzo" th:text="${videogameRec.newPrice}">50$</h3>
+	                </a>
+	            </div>
+	
+	    </section>
+	
+	
+	    <footer th:replace="fragments/footer.html :: footer"></footer>
+	
+	    <script th:replace="fragments/base.html :: script"></script>
+	    
+	</body>
 </html>
