--- a/gameshock_project/src/main/resources/templates/fragments/navbar_amm.html
+++ b/gameshock_project/src/main/resources/templates/fragments/navbar_amm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 	<head th:fragment="navbar_amm_css">
-		<link th:href="@{/css/navbar_amm_style.css}" rel="stylesheet">
+		<link th:href="@{/css/fragments_style/navbar_amm_style.css}" rel="stylesheet">
 	</head>
 	
 	<body>
@@ -15,7 +15,7 @@
 		        <div class="utility">
 		            <ul class="menu">
 		                <li class="flip_menu"><a href="home.html" th:href="@{'/logout'}">Esci</a></li>
-		                <li class="flip_menu"><a href="home_amm.html" th:href="@{'/homeAmm'}">Ciao, nome amministratore</a></li>
+		                <li class="flip_menu"><a href="home_amm.html" th:href="@{'/admin/homeAmm'}">Ciao, nome amministratore</a></li>
 		            </ul>
 		            <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
 		        </div>
