--- a/gameshock_project/src/main/resources/templates/admin/insert_videogame_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/insert_videogame_amm.html
@@ -31,25 +31,25 @@
 	            <input type="text" placeholder="5" th:field="*{rating}">
 	            <h6 th:if="${#fields.hasErrors('rating')}" th:errors="*{rating}" th:style="'color:red'"> </h6>
 	            <h6>New Price:</h6>
-	            <input type="text" placeholder="50$" th:field="*{newPrice}">
+	            <input type="text" placeholder="50" th:field="*{newPrice}">
 	            <h6 th:if="${#fields.hasErrors('newPrice')}" th:errors="*{newPrice}" th:style="'color:red'"> </h6>
 	            <h6>Used Price:</h6>
-	            <input type="text" placeholder="10$" th:field="*{usedPrice}">
+	            <input type="text" placeholder="10" th:field="*{usedPrice}">
 	            <h6 th:if="${#fields.hasErrors('usedPrice')}" th:errors="*{usedPrice}" th:style="'color:red'"> </h6>
-	            <h6>Data Release:</h6>
-	            <input type="date" placeholder="Minecraft" th:field="*{releaseDate}">
+	            <h6>Release Date:</h6>
+	            <input type="date" th:field="*{releaseDate}">
 	            <h6 th:if="${#fields.hasErrors('releaseDate')}" th:errors="*{releaseDate}" th:style="'color:red'"> </h6>
 	            <h6>Genre:</h6>
-	            <input type="text" placeholder="Minecraft" th:field="*{genre}">
+	            <input type="text" placeholder="SPORT" th:field="*{genre}">
 	            <h6 th:if="${#fields.hasErrors('genre')}" th:errors="*{genre}" th:style="'color:red'"> </h6>
 	            <h6>Pegi:</h6>
-	            <input type="text" placeholder="Minecraft" th:field="*{pegi}">
+	            <input type="text" placeholder="3" th:field="*{pegi}">
 	            <h6 th:if="${#fields.hasErrors('pegi')}" th:errors="*{pegi}" th:style="'color:red'"> </h6>
 	            <h6>Publisher:</h6>
-	            <input type="text" placeholder="Minecraft" th:field="*{publisher}">
+	            <input type="text" placeholder="EA sports" th:field="*{publisher}">
 	            <h6 th:if="${#fields.hasErrors('publisher')}" th:errors="*{publisher}" th:style="'color:red'"> </h6>
 	            <h6>Platform:</h6>
-	            <input type="text" placeholder="PlayStation" th:field="*{platform.name}">
+	            <input type="text" placeholder="PlayStation 4" th:field="*{platform.name}">
 	            <h6 th:if="${#fields.hasErrors('platform')}" th:errors="*{platform}" th:style="'color:red'"> </h6>
 	            <h6>Image:</h6>
 	            <input type="file" placeholder="Image" name="file">
