--- a/gameshock_project/src/main/resources/static/css/admin_style/show_videogames_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/show_videogames_amm_style.css
@@ -20,7 +20,7 @@ CONTENT PAGE
     border-radius: 20px;
     border: 2px solid rgba(219,70,252,1);
     background: #fff;
-    width: 100%;
+    width: 95%;
     height: 120px;
     display: flex;
     align-items: center;
@@ -40,10 +40,10 @@ CONTENT PAGE
 .link_item{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     text-decoration: none;
     color: black;
-    width: 90%;
+    width: 85%;
 }
 
 .img_item img{
