--- a/gameshock_project/src/main/resources/static/css/admin_style/insert_videogame_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/insert_videogame_amm_style.css
@@ -64,11 +64,11 @@ CONTENT PAGE
 }
 
 .content_page form input[type=submit] {
-	width: 120px;
+	width: 110px;
 	height: 40px;
-	font-size: 20px;
+	font-size: 25px;
     border-radius: 10px;
-    padding: 5px 40px;
+    padding: 5px;
     background-color: rgba(219,70,252,1);
     border: none;
 }
