--- a/gameshock_project/src/main/resources/static/css/videogame_style/details_videogame_style.css
+++ b/gameshock_project/src/main/resources/static/css/videogame_style/details_videogame_style.css
@@ -13,6 +13,7 @@ SHOWCASE VIDEOGAME
     border-right: 2px solid grey;
     width: 50%;
     text-align: center;
+    padding-top: 10px;
 }
 
 .img_videogame img{
@@ -30,13 +31,14 @@ SHOWCASE VIDEOGAME
 .new_price{
     border-radius: 20px;
     background: green;
-    padding: 10px;
+    padding: 7px;
+    text-align: center;
 }
 
 .old_price{
     border-radius: 20px;
     background: red;
-    padding: 10px;
+    padding: 7px;
 }
 
 .more_info{
@@ -52,11 +54,57 @@ SHOWCASE VIDEOGAME
 
 .more_info h2 {
     display: inline-block;
+    margin-left: 10px;
+}
+
+.more_info p {
+	margin-left: 25px;
+}
+
+.description h2{
+	display: block;
+	margin-bottom: 15px;
+}
+
+.platform p {
+	margin-right: 0px;
+}
+
+.rating p {
+	margin-right: 0px;
+}
+
+.rating span {
+	font-size: 50px;
+    color: blueviolet;
+}
+
+.description p{
+	margin-bottom: 10px;
 }
 
 .content_specific{
     border-top: 2px solid gray;
     border-bottom: 2px solid gray;
+}
+
+.box_recommended_products:hover {
+	-webkit-box-shadow: 5px 5px 29px 9px rgba(0,0,0,0.87); 
+    box-shadow: 5px 5px 29px 9px rgba(0,0,0,0.87);
+}
+
+.box_recommended_products img{
+    height: 270px;
+}
+
+.box_recommended_products h2,h3 {
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+
+.box_recommended_products h3 {
+    color: green;
+    font-weight: bolder;
 }
 
 
