--- a/gameshock_project/src/main/resources/templates/admin/home_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/home_amm.html
@@ -17,5 +17,7 @@
 	       <h4>Scegli cosa vuoi fare nella barra qui a sinistra</h4>
 	    </section>
 	    
+	    <script th:replace="fragments/base.html :: script"></script>
+	    
 	</body>
 </html>
