--- a/gameshock_project/src/main/resources/templates/admin/insert_accessory_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/insert_accessory_amm.html
@@ -51,5 +51,7 @@
 	        </form>
 	    </section>
 	    
+	    <script th:replace="fragments/base.html :: script"></script>
+	    
 	</body>
 </html>
