--- a/gameshock_project/src/main/resources/templates/fragments/navdrawer_amm.html
+++ b/gameshock_project/src/main/resources/templates/fragments/navdrawer_amm.html
@@ -15,6 +15,7 @@
 		                <li><a href="/inserisci_accessorio_amm.html" th:href="@{'/admin/insertAccessory'}">Insert Accessory</a></li>
 		                <li><a href="/vedi_videogame_amm.html" th:href="@{'/admin/showDeleteVideogamesAmm'}">Show/Delete Videogame</a></li>
 		                <li><a href="/vedi_accessorio_amm.html" th:href="@{'/admin/showDeleteAccessoriesAmm'}">Show/Delete Accessory</a></li>
+		                <li class="visibility_mobile"><a th:href="@{'/logout'}">Logout</a></li>		                
 		            </ul>
 		        </div>
 		    </nav>
