--- a/gameshock_project/src/main/resources/static/css/admin_style/home_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/home_amm_style.css
@@ -29,3 +29,25 @@ CONTENT PAGE
     border-radius: 20px;
     color: white;
 }
+
+@media (max-width: 768px){
+	
+	.content_page{
+		width: 100vw;
+		top: 80px;
+		left: 0px;
+	}
+	
+	.content_page h1{
+		font-size: 35px;
+	    padding: 5px 10px;
+	    margin: 10px;
+	}
+	
+	.content_page h4{
+	    font-size: 20px;
+	    padding: 5px 10px;
+	    margin: 10px;
+	}
+	
+}
