--- a/gameshock_project/src/main/resources/static/css/admin_style/show_accessories_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/show_accessories_amm_style.css
@@ -7,7 +7,7 @@ CONTENT PAGE
     top: 80px;
     left: 260px;
     width: calc(100% - 250px);
-    min-height: calc(100vh -80px);
+    min-height: calc(100% - 80px);
     text-align: center;
     padding: 50px;
     background: url(../../images/admin_images/clash_controller.jpg) center center;
@@ -102,3 +102,34 @@ CONTENT PAGE
     background-color: red;
     border-radius: 10px;
 }
+
+
+
+
+@media (max-width: 768px){
+	
+	.content_page{
+		padding: 5px;
+		width: 100vw;
+		top: 80px;
+		left: 0px;
+	}
+	
+	.content_page h1{
+		font-size: 35px;
+	    padding: 5px 10px;
+	    margin: 10px;
+	}
+	
+	.content_page h4{
+	    font-size: 20px;
+	    padding: 5px 10px;
+	    margin: 10px;
+	}
+	
+	.title_and_search{
+	    flex-direction: column;
+	}
+	
+}
+
