--- a/gameshock_project/src/main/resources/static/css/admin_style/show_videogames_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/show_videogames_amm_style.css
@@ -6,7 +6,7 @@ CONTENT PAGE
     position: absolute;
     top: 80px;
     left: 260px;
-    /* height: calc(100% - 80px); */
+    min-height: calc(100% - 80px);
     width: calc(100% - 260px);
     text-align: center;
     padding: 50px;
@@ -97,4 +97,32 @@ CONTENT PAGE
 .cestino:hover{
     background-color: red;
     border-radius: 10px;
+}
+
+
+@media (max-width: 768px){
+	
+	.content_page{
+		padding: 5px;
+		width: 100vw;
+		top: 80px;
+		left: 0px;
+	}
+	
+	.content_page h1{
+		font-size: 35px;
+	    padding: 5px 10px;
+	    margin: 10px;
+	}
+	
+	.content_page h4{
+	    font-size: 20px;
+	    padding: 5px 10px;
+	    margin: 10px;
+	}
+	
+	.title_and_search{
+	    flex-direction: column;
+	}
+	
 }
