--- a/gameshock_project/src/main/resources/templates/admin/insert_videogame_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/insert_videogame_amm.html
@@ -58,5 +58,7 @@
 	        </form>
 	    </section>
 	    
+	    <script th:replace="fragments/base.html :: script"></script>
+	    
 	</body>
 </html>
