--- a/gameshock_project/src/main/resources/templates/admin/show_accessories_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/show_accessories_amm.html
@@ -32,11 +32,12 @@
 	                <h6><span>Code: </span><span th:text="${accessory.code}">codiceprova</span></h6>
 	                <h6><span>Platform: </span><span th:text="${accessory.platform.name}">nomepiattaforma</span></h6>					
 	            </a>
-	            <a class="cestino" th:href="@{'/admin/deleteAccessoryAmm/' + ${accessory.code}}"><img th:src="@{/images/icona_cestino.png}" alt=""></a>
+	            <a class="cestino" th:href="@{'/admin/deleteAccessoryAmm/' + ${accessory.code}}"><img th:src="@{/images/general_images/icona_cestino.png}" alt=""></a>
 	        </div>
 	        
-	        
 	    </section>
+	    
+	    <script th:replace="fragments/base.html :: script"></script>
 	
 	
 	</body>
