--- a/gameshock_project/src/main/resources/templates/fragments/navbar_amm.html
+++ b/gameshock_project/src/main/resources/templates/fragments/navbar_amm.html
@@ -17,7 +17,7 @@
 		                <li class="flip_menu"><a href="home.html" th:href="@{'/logout'}">Esci</a></li>
 		                <li class="flip_menu"><a href="home_amm.html" th:href="@{'/admin/homeAmm'}">Ciao, nome amministratore</a></li>
 		            </ul>
-		            <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
+		            <div class="hamburger_navdrawer"><i class="fas fa-bars fa-2x wt"></i></div>
 		        </div>
 		    </nav>
 		</header>
