--- a/gameshock_project/src/main/resources/templates/admin/show_videogames_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/show_videogames_amm.html
@@ -15,8 +15,8 @@
 	    <section class="content_page">
 	        <div class="title_and_search">
 	            <h1>Videogames</h1>
-	            <form th:action="@{/admin/ricercaVideogame}" method="POST">
-	                <input type="text" name="param" placeholder="ricerca videogame">
+	            <form th:action="@{/admin/researchVideogame}" method="POST">
+	                <input type="text" name="param" placeholder="research videogame">
 	                <input type="submit" value="Search">
 	            </form>
 	        </div>
