--- a/gameshock_project/src/main/resources/templates/details_videogame.html
+++ b/gameshock_project/src/main/resources/templates/details_videogame.html
@@ -67,14 +67,14 @@
 	    <section class="recommended">
 	        <h1>You may also like...</h1>
 	
-	        <!--<div class="recommended_products">
+	        <div class="recommended_products">
 	            <div class="box_recommended_products" th:each="videogameRec : ${videogamesRec}">
 	                <a href="dettagli_videogame.html" th:href="@{'/detailsVideogame/' + ${videogameRec.code}}">
 	                	<h2 th:text="${videogameRec.name}">Nome Gioco</h2>
 	                    <img th:src="*{'data:image/jpeg;base64,'+ {videogameRec.image}}" alt="">
 	                    <h3 th:text="${videogameRec.platform.name}">playstation</h3>
 	                </a>
-	            </div>-->
+	            </div>
 	
 	    </section>
 	
