--- a/gameshock_project/src/main/resources/static/css/admin_style/show_videogames_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/show_videogames_amm_style.css
@@ -47,7 +47,8 @@ CONTENT PAGE
 }
 
 .img_item img{
-    height: 100px;
+	padding-top: 7px;
+    height: 115px;
 }
 
 .title_and_search{
@@ -57,8 +58,9 @@ CONTENT PAGE
 }
 
 .title_and_search h1{
+	margin-top: 30px;
     font-family: 'Lobster', cursive;
-    font-size: 50px;
+    font-size: 60px;
     background: -webkit-linear-gradient(rgba(219,70,252,1), rgba(63,94,251,1));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -69,8 +71,8 @@ CONTENT PAGE
 }
 
 .title_and_search input[type=text]{
-    border-radius: 10px;
-    height: 30px;
+    border-radius: 15px;
+    height: 35px;
     width: 200px;
     outline: none;
 }
@@ -81,8 +83,9 @@ CONTENT PAGE
 }
 
 .title_and_search input[type=submit]{
-    border-radius: 10px;
-    height: 30px;
+	font-size: 20px;
+    border-radius: 15px;
+    height: 35px;
     width: 80px;
     background: linear-gradient(90deg, rgba(63,94,251,1) 0%, rgba(219,70,252,1) 100%);;
     border: none;
