--- a/gameshock_project/src/main/resources/templates/accessories.html
+++ b/gameshock_project/src/main/resources/templates/accessories.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <head th:insert="fragments/base.html :: headerfiles(title=#{pageTitle.accessori})"></head>
-	<head th:insert="fragments/navbar.html :: navbar_css"> </head>
-	<head th:insert="fragments/footer.html :: footer_css"> </head>
-	<link th:href="@{/css/accessori_style.css}" rel="stylesheet">
-</head>
-<body>
-
-    <header th:replace="fragments/navbar.html :: navbar"></header>
-
-
-    <section class="accessori_content">
-        <div class="title_and_search">
-            <h1>Accessori</h1>
-            <form action="#">
-                <input type="text" placeholder="ricerca nome accessorio">
-                <input type="submit" value="Search">
-            </form>
-        </div>
-
-        <div class="collection_accessori">
-        
-            <div class="box_accessorio" th:each="accessorio : ${accessori}">
-                <a href="dettagli_accessorio.html" th:href="@{'/dettaglioAccessorio/' + ${accessorio.code}}">
-                    <img th:src="*{'data:image/jpeg;base64,'+ {accessorio.image}}" alt="">
-                    <h2 th:text="${accessorio.name}">Nome Accessorio</h2>
-                    <h3 class="platform" th:text="${accessorio.platform.name}">platform</h3>
-                </a>
-            </div>
-            
-        </div>
-    </section>
-
-    <footer th:replace="fragments/footer.html :: footer"></footer>
-
-    <script th:replace="fragments/base.html :: script"></script>
-    
-</body>
+	<head>
+	    <head th:insert="fragments/base.html :: headerfiles(title=#{pageTitle.accessori})"></head>
+		<head th:insert="fragments/navbar.html :: navbar_css"> </head>
+		<head th:insert="fragments/footer.html :: footer_css"> </head>
+		<link th:href="@{/css/accessories_style/accessories_style.css}" rel="stylesheet">
+	</head>
+	<body>
+	
+	    <header th:replace="fragments/navbar.html :: navbar"></header>
+	
+	
+	    <section class="accessori_content">
+	        <div class="title_and_search">
+	            <h1>Accessories</h1>
+	            <form action="#">
+	                <input type="text" placeholder="ricerca nome accessorio">
+	                <input type="submit" value="Search">
+	            </form>
+	        </div>
+	
+	        <div class="collection_accessori">
+	        
+	            <div class="box_accessorio" th:each="accessory : ${accessories}">
+	                <a href="dettagli_accessorio.html" th:href="@{'/detailsAccessory/' + ${accessory.code}}">
+	                    <h2 th:text="${accessory.name}">Nome Accessorio</h2>
+	                    <img th:src="*{'data:image/jpeg;base64,'+ {accessory.image}}" alt="">
+	                    <h3 class="platform" th:text="${accessory.platform.name}">platform</h3>
+	                </a>
+	            </div>
+	            
+	        </div>
+	    </section>
+	
+	    <footer th:replace="fragments/footer.html :: footer"></footer>
+	
+	    <script th:replace="fragments/base.html :: script"></script>
+	    
+	</body>
 </html>
