--- a/gameshock_project/src/main/resources/templates/admin/home_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/home_amm.html
@@ -13,7 +13,7 @@
 	    <header th:replace="fragments/navdrawer_amm.html :: navdrawer_amm"></header>
 	
 	    <section class="content_page">
-	       <h1>WELCOME NOME ADMIN</h1>
+	       <h1>WELCOME</h1>
 	       <h4>Scegli cosa vuoi fare nella barra qui a sinistra</h4>
 	    </section>
 	    
