--- a/gameshock_project/src/main/resources/templates/admin/insert_accessory_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/insert_accessory_amm.html
@@ -13,7 +13,7 @@
 	    <header th:replace="fragments/navdrawer_amm.html :: navdrawer_amm"></header>
 	
 	    <section class="content_page">
-	        <h3>Insert Accessory</h3>
+	        <h1>Insert Accessory</h1>
 	        <form th:action="@{/admin/addAccessory}" method="post" th:object="${accessory}" enctype="multipart/form-data">
 	        	<div th:if="${#fields.hasGlobalErrors()}">
 	            	<p th:each="err : ${#fields.globalErrors()}" th:text="${err}" th:style="'color:red'" >...</p>
@@ -22,7 +22,7 @@
 	            <input type="text" placeholder="123456" th:field="*{code}">
 	            <h6 th:if="${#fields.hasErrors('code')}" th:errors="*{code}" th:style="'color:red'"> </h6>
 	            <h6>Name:</h6>
-	            <input type="text" placeholder="Minecraft" th:field="*{name}">
+	            <input type="text" placeholder="Controller White" th:field="*{name}">
 	            <h6 th:if="${#fields.hasErrors('name')}" th:errors="*{name}" th:style="'color:red'"> </h6>
 	            <h6>Description:</h6>
 	            <textarea type="text" placeholder="Good" th:field="*{description}"></textarea>
@@ -30,24 +30,24 @@
 	            <input type="text" placeholder="5" th:field="*{rating}">
 	            <h6 th:if="${#fields.hasErrors('rating')}" th:errors="*{rating}" th:style="'color:red'"> </h6>
 	            <h6>New Price:</h6>
-	            <input type="text" placeholder="50$" th:field="*{newPrice}">
+	            <input type="text" placeholder="50" th:field="*{newPrice}">
 	            <h6 th:if="${#fields.hasErrors('newPrice')}" th:errors="*{newPrice}" th:style="'color:red'"> </h6>
 	            <h6>Used Price:</h6>
-	            <input type="text" placeholder="10$" th:field="*{usedPrice}">
+	            <input type="text" placeholder="10" th:field="*{usedPrice}">
 	            <h6 th:if="${#fields.hasErrors('usedPrice')}" th:errors="*{usedPrice}" th:style="'color:red'"> </h6>
 	            <h6>Color:</h6>
 	            <input type="text" placeholder="Red" th:field="*{color}">
 	            <h6 th:if="${#fields.hasErrors('color')}" th:errors="*{color}" th:style="'color:red'"> </h6>
 	            <h6>Category:</h6>
-	            <input type="text" placeholder="War" th:field="*{category}">
+	            <input type="text" placeholder="CONTROLLER" th:field="*{category}">
 	            <h6 th:if="${#fields.hasErrors('category')}" th:errors="*{category}" th:style="'color:red'"> </h6>
 	            <h6>Platform:</h6>
-	            <input type="text" placeholder="PlayStation" th:field="*{platform.name}">
+	            <input type="text" placeholder="PlayStation 4" th:field="*{platform.name}">
 	            <h6 th:if="${#fields.hasErrors('platform')}" th:errors="*{platform}" th:style="'color:red'"> </h6>
 	            <h6>Image:</h6>
 	            <input type="file" placeholder="Image" name="file">
 	            <br>
-	            <input type="submit" name="Insert">
+	            <input type="submit" name="Insert" value="Insert">
 	        </form>
 	    </section>
 	    
