--- a/gameshock_project/src/main/resources/templates/index.html
+++ b/gameshock_project/src/main/resources/templates/index.html
@@ -15,8 +15,7 @@
 	
 	        <div class="showcase">
 	            <div class="showcase_content_img">
-	                <h1>GAMESHOCK</h1>
-	                <h3>Passa dalla nostra parte per vincere</h3>
+	                <h1>Come over to our side to win</h1>
 	            </div>
 	        </div>
 	
@@ -32,10 +31,8 @@
 	            <div class="text_videogame">
 	                <h2>Videogames
 	                </h2>
-	                <p>Scegli quello giusto per te ed impegnati per diventare
-	                    il più forte.
-	                    <br>
-	                    Abbiamo una vasta scelta di videogiochi per tutte le console </p>
+	                <p>Choose the right one for you and strive to become the strongest.
+                       We have a large selection of video games for all consoles</p>
 	            </div>
 	        </section>
 	    </div>
@@ -49,10 +46,9 @@
 	        <section class="accessory_choice">
 	            <div class="text_accessory">
 	                <h2>Accessories</h2>
-	                <p>Ogni singolo accessorio può fare la differenza in ogni partita.
-	                    Scegli quello giusto e vedrai i risultati!
-	                    <br>
-	                    Abbiamo una vasta scelta di accessori per tutte le console </p>
+	                <p>Every single accessory can make a difference in every game.
+					   Choose the right one and you will see the results!
+					   We have a large selection of accessories for all consoles </p>
 	            </div>
 	            <div class="img_accessory"></div>
 	        </section>
