--- a/gameshock_project/src/main/resources/templates/accessories.html
+++ b/gameshock_project/src/main/resources/templates/accessories.html
@@ -14,8 +14,8 @@
 	    <section class="accessori_content">
 	        <div class="title_and_search">
 	            <h1>Accessories</h1>
-	            <form action="#">
-	                <input type="text" placeholder="ricerca nome accessorio">
+	            <form th:action="@{/researchAccessory}" method="POST">
+	                <input type="text" name="param" placeholder="research accessory">
 	                <input type="submit" value="Search">
 	            </form>
 	        </div>
