--- a/gameshock_project/src/main/resources/templates/admin/home_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/home_amm.html
@@ -14,7 +14,7 @@
 	
 	    <section class="content_page">
 	       <h1>WELCOME</h1>
-	       <h4>Scegli cosa vuoi fare nella barra qui a sinistra</h4>
+	       <h4>Choose what you want to do in the bar on the left</h4>
 	    </section>
 	    
 	</body>
