--- a/gameshock_project/src/main/resources/static/css/admin_style/login_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/login_amm_style.css
@@ -95,3 +95,14 @@ input[type=submit]:hover{
     box-shadow: 0px 0px 15px 5px #D955FF;
     transition: 0.5s;
 }
+
+@media (max-width: 768px) {
+	
+	form {
+		width: 330px;
+	}
+	
+	
+	
+	
+}
