--- a/gameshock_project/src/main/resources/static/css/information_style/information_style.css
+++ b/gameshock_project/src/main/resources/static/css/information_style/information_style.css
@@ -58,5 +58,30 @@ td {
 
 @media (max-width: 768px){
 
+    table{
+		width:365px;
+		overflow-x: auto;
+		border-spacing: 10px;
+	}
+	
+	caption p, #dove_siamo p{
+    	font-size: 40px;
+    	width:365px;
+    }
     
+    #dove_siamo p {
+		margin-top: 40px;
+	}
+	
+	.carta_sconti p {
+		margin-top: 60px;
+	}
+	
+	td.riga , th {
+    	font-size: 15px;
+    }
+    
+    td {
+    font-size: 15px;
+	}
 }
