--- a/gameshock_project/src/main/resources/static/css/admin_style/show_accessories_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/show_accessories_amm_style.css
@@ -101,3 +101,42 @@ CONTENT PAGE
     background-color: red;
     border-radius: 10px;
 }
+
+@media (max-width: 768px){
+	
+	.content_page{
+		padding: 5px;
+		width: 100vw;
+		top: 80px;
+		left: 0px;
+	}
+	
+	.content_page h1{
+		font-size: 35px;
+	    padding: 5px 10px;
+	    margin: 10px;
+	}
+	
+	.content_page h4{
+	    font-size: 20px;
+	    padding: 5px 10px;
+	    margin: 10px;
+	}
+	
+	.title_and_search{
+	    flex-direction: column;
+	}
+	
+	.title_and_search form{
+	    margin: 0;
+	}
+	
+	.content_item  {
+		width: 365px;
+	}
+	
+	.img_item img {
+		height: 100px;
+	}
+	
+}
