--- a/gameshock_project/src/main/resources/templates/admin/home_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/home_amm.html
@@ -13,7 +13,7 @@
 	    <header th:replace="fragments/navdrawer_amm.html :: navdrawer_amm"></header>
 	
 	    <section class="content_page">
-	       <h1>WELCOME</h1>
+	       <h1>WELCOME <span th:text="|${admin.name} ${admin.surname}">nome e cognome admin</span></h1>
 	       <h4>Choose what you want to do in the bar on the left</h4>
 	    </section>
 	    
