--- a/gameshock_project/src/main/resources/templates/information.html
+++ b/gameshock_project/src/main/resources/templates/information.html
@@ -14,7 +14,7 @@
 	    
 	      <table>
 	        <caption>
-	          <p>Orari Di Apertura</p>
+	          <p>Opening Time</p>
 	        </caption>
 	        <thead>
 	          <tr>
@@ -27,45 +27,45 @@
 	        <tbody>
 	          <tr>
 	              <td class="riga">Lunedì</td>
-	              <td>10:00 - 12:00</td>
-	              <td>10:00 - 12:00</td>
-	              <td>10:00 - 12:00</td>
+	              <td>9:00 - 13:00</td>
+	              <td>14:00 - 19:00</td>
+	              <td>21:00 - 00:00</td>
 	          </tr>
 	          <tr>
 	            <td class="riga">Martedì</td>
-	            <td>10:00 - 12:00</td>
-	            <td>10:00 - 12:00</td>
-	            <td>10:00 - 12:00</td>
+	            <td>9:00 - 13:00</td>
+	            <td>14:00 - 19:00</td>
+	            <td>21:00 - 00:00</td>
 	          </tr>
 	          <tr>
 	            <td class="riga">Mercoledì</td>
-	            <td>10:00 - 12:00</td>
-	            <td>10:00 - 12:00</td>
-	            <td>10:00 - 12:00</td>
+	            <td>9:00 - 13:00</td>
+	            <td>14:00 - 19:00</td>
+	            <td>21:00 - 00:00</td>
 	          </tr>
 	          <tr>
 	            <td class="riga">Giovedì</td>
-	            <td>10:00 - 12:00</td>
-	            <td>10:00 - 12:00</td>
-	            <td>10:00 - 12:00</td>
+	            <td>9:00 - 13:00</td>
+	            <td>14:00 - 19:00</td>
+	            <td>21:00 - 00:00</td>
 	          </tr>
 	          <tr>
 	            <td class="riga">Venerdì</td>
-	            <td>10:00 - 12:00</td>
-	            <td>10:00 - 12:00</td>
-	            <td>10:00 - 12:00</td>
+	            <td>9:00 - 13:00</td>
+	            <td>14:00 - 19:00</td>
+	            <td class="chiuso">closed</td>
 	          </tr>
 	          <tr>
 	            <td class="riga">Sabato</td>
-	            <td>10:00 - 12:00</td>
-	            <td>10:00 - 12:00</td>
-	            <td>10:00 - 12:00</td>
+	            <td>9:00 - 13:00</td>
+	            <td class="chiuso">closed</td>
+	            <td class="chiuso">closed</td>
 	          </tr>
 	          <tr>
 	            <td class="riga">Domenica</td>
-	            <td class="chiuso">chiuso</td>
-	            <td>10:00 - 12:00</td>
-	            <td>10:00 - 12:00</td>
+	            <td class="chiuso">closed</td>
+	            <td class="chiuso">closed</td>
+	            <td class="chiuso">closed</td>
 	          </tr>
 	        </tbody>
 	        <!--<tfoot>
@@ -74,7 +74,7 @@
 	      </table>
 	
 	      <div  id="dove_siamo">
-	      	<!--<p>Dove siamo</p>-->
+	      	<p>Where We Are</p>
 	      </div>
 	      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11886.957915855115!2d12.4696574!3d41.855434!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd7c1990833e3ea29!2sIngegneria%20Informatica%20-%20Universit%C3%A0%20Roma%20Tre!5e0!3m2!1sit!2sit!4v1622363790996!5m2!1sit!2sit" 
 	      width="100%" height="450" style="border:0; margin: 20px 0px;" allowfullscreen="" loading="lazy"></iframe>
@@ -120,7 +120,7 @@
 	              <td style="background-color: slategray;">Platinum</td>
 	              <td>5</td>
 	              <td>2000€</td>
-	              <td>25%</td>
+	              <td>20%</td>
 	          </tr>
 	        </tbody>
 	      </table>
