--- a/gameshock_project/src/main/resources/templates/admin/show_videogames_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/show_videogames_amm.html
@@ -26,12 +26,15 @@
 	                <div class="img_item">
 	                    <img th:src="*{'data:image/jpeg;base64,'+{videogame.image}}" alt="">
 	                </div>
-	                <h5><span>Name: </span><span th:text="${videogame.name}">nomeprova</span></h5>
-	                <h5><span>Platform: </span><span th:text="${videogame.platform.name}">nomepiattaforma</span></h5>					
+	                <h6><span>Name: </span><span th:text="${videogame.name}">nomeprova</span></h6>
+	                <h6><span>Code: </span><span th:text="${videogame.code}">codiceprova</span></h6>
+	                <h6><span>Platform: </span><span th:text="${videogame.platform.name}">nomepiattaforma</span></h6>				
 	            </a>
 	            <a class="cestino" th:href="@{'/admin/deleteVideogameAmm/' + ${videogame.code}}"><img th:src="@{/images/general_images/basket_icon.png}" alt=""></a>
 	        </div>
 	    </section>
+	    
+	    <script th:replace="fragments/base.html :: script"></script>
 	    
 	</body>
 </html>
